# ochat

./: .gitignore  .rgignore  DEVELOPMENT.md  Readme.md  Readme.old.md  chat_tui.md  chat_tui_app_refactor_tasks.yml  chat_tui_app_refactor_tasks_details.md  chatgpt.opam  control-flow-chatmd.md  dune  dune-project  history.md  idea.md  markdown_indexing_plan.md  ochat-guide.md  ochat.opam  plan.md  proposal.md  raw-openai-streaming-response-json-parsing-error.txt  ui_design_test.md
lib/: apply_patch.ml  apply_patch.mli  apply_patch_error.ml  apply_patch_error.mli  bin_prot_utils.ml  bin_prot_utils.mli  bin_prot_utils_eio.ml  bin_prot_utils_eio.mli  bm25.ml  bm25.mli  chat_completion.ml  chat_response.ml  chatml_builtin_modules.ml  chatml_lang.ml  chatml_lexer.mll  chatml_parser.mly  chatml_resolver.ml  chatml_typechecker.md  chatml_typechecker.ml  definitions.ml  definitions.mli  doc.ml  doc.mli  dune  dune_describe.ml  dune_describe.mli  embed_service.ml  embed_service.mli  environment.ml  environment.mli  filter_file.ml  frame_env.ml  functions.ml  functions.mli  github.ml  github.mli  gpt_function.ml  gpt_function.mli  indexer.ml  indexer.mli  (+55 more)
lib/chat_response/: cache.ml  chatml_moderation.ml  chatml_moderation.mli  chatml_moderator.ml  chatml_moderator.mli  chatml_turn_driver.ml  chatml_turn_driver.mli  compact_history.ml  config.ml  converter.ml  ctx.ml  ctx.mli  driver.ml  driver.mli  dune  fetch.ml  fetch.mli  fork.ml  fork.mli  in_memory_stream.ml  in_memory_stream.mli  model_executor.ml  model_executor.mli  moderation.ml  moderation.mli  moderator_manager.ml  moderator_manager.mli  response_loop.ml  response_loop.mli  runtime_semantics.ml  runtime_semantics.mli  tool.ml  tool.mli  tool_call.ml  tool_call.mli
lib/chat_tui/: app.ml  app.mli  app_compaction.ml  app_compaction.mli  app_context.ml  app_context.mli  app_events.ml  app_events.mli  app_reducer.ml  app_reducer.mli  app_runtime.ml  app_runtime.mli  app_stream_apply.ml  app_stream_apply.mli  app_streaming.ml  app_streaming.mli  app_submit.ml  app_submit.mli  attachments.ml  attachments.mli  chat_page_layout.ml  chat_page_layout.mli  chatml_async_session_controller_tasks.yml  chatml_async_session_controller_tasks_details.md  chatml_host_runtime_integration_tasks.yml  cmd.ml  cmd.mli  command_mode_implementation_session_notes.md  command_mode_implementation_steps.md  command_mode_plan.md  context.md  controller.ml  controller.mli  controller_cmdline.ml  controller_history_search.ml  controller_normal.ml  controller_register.ml  controller_search.ml  controller_shared.ml  controller_types.ml  (+61 more)
lib/chatmd/: chatmd_ast.ml  chatmd_lexer.mll  chatmd_parser.mly  dune  prompt.ml  prompt.mli
lib/chatml/: chatml_builtin_modules.ml  chatml_builtin_modules.mli  chatml_builtin_spec.ml  chatml_builtin_spec.mli  chatml_builtin_surface.ml  chatml_builtin_surface.mli  chatml_debug_log.ml  chatml_debug_log.mli  chatml_eval.ml  chatml_eval.mli  chatml_lang.ml  chatml_lexer.mli  chatml_lexer.mll  chatml_moderator_runtime.ml  chatml_moderator_runtime.mli  chatml_parse.ml  chatml_parse.mli  chatml_parser.mly  chatml_resolver.ml  chatml_resolver.mli  chatml_runtime.ml  chatml_runtime.mli  chatml_slot_layout.ml  chatml_typechecker.ml  chatml_value_codec.ml  chatml_value_codec.mli  dune  frame_env.ml
lib/context_compaction/: compactor.ml  compactor.mli  compactor_expect.ml  config.ml  config.mli  config_expect.ml  dune  relevance_judge.ml  relevance_judge.mli  relevance_judge_expect.ml  summarizer.ml  summarizer.mli  summarizer_expect.ml
lib/docs-src/: Io.doc.md  README.md  apply_patch.doc.md  bin_prot_utils_eio.doc.md  definitions.doc.md  dune_describe.doc.md  embed_service.doc.md  environment.doc.md  functions.doc.md  github.doc.md  gpt_function.doc.md  markdown_crawler.doc.md  markdown_indexer.doc.md  markdown_snippet.doc.md  md_index_catalog.doc.md  merlin.doc.md  mime.doc.md  notty_scroll_box.doc.md  odoc_crawler.doc.md  odoc_indexer.doc.md  package_index.doc.md  source.doc.md  template.doc.md  tikitoken.doc.md  vector_db.doc.md
lib/mcp/: dune  mcp_client.ml  mcp_client.mli  mcp_prompt_agent.ml  mcp_prompt_agent.mli  mcp_server_core.ml  mcp_server_core.mli  mcp_server_http.ml  mcp_server_http.mli  mcp_server_router.ml  mcp_server_router.mli  mcp_tool.ml  mcp_transport.mli  mcp_transport_http.ml  mcp_transport_http.mli  mcp_transport_interface.mli  mcp_transport_stdio.ml  mcp_transport_stdio.mli  mcp_types.ml  mcp_types.mli  oauth.md
lib/meta_prompting/: aggregator.ml  aggregator.mli  context.ml  context.mli  dune  (+24 more)
script/: binary_list.ml  concat_ochat_docs.ml  dep_graph_generator.ml  doc_coverage.ml  doc_mining.ml  dune  exe_survey.ml  gen_dep_graph.sh  module_catalogue.ml  readme_validation.ml
test/: _print_nested_list.ml  apply_patch_snippets_test.ml  apply_patch_test.ml  chat_response_agent_prompt_test.ml  chat_response_budget_policy_test.ml  chat_response_cache_test.ml  chat_response_converter_test.ml  chat_response_in_memory_stream_test.ml  chat_response_moderation_test.ml  chat_response_moderator_executor_test.ml  chat_response_moderator_manager_test.ml  chat_tui_cmdline_mode_test.ml  chat_tui_command_mode_test.ml  chat_tui_highlight_tm_engine_scopes_test.ml  chat_tui_highlight_tm_engine_tokenize_error_test.ml  chat_tui_markdown_marker_suppression_test.ml  chat_tui_moderation_test.ml  chat_tui_moderator_wakeup_test.ml  chat_tui_normal_mode_cursor_test.ml  chat_tui_parallel_tool_calls_test.ml  chat_tui_persistence_materialization_test.ml  chat_tui_redraw_throttle_test.ml  chat_tui_renderer_heights_parity_test.ml  chat_tui_renderer_parity_fuzz_test.ml  chat_tui_renderer_parity_test.ml  chat_tui_sanitize_wrap_test.ml  chat_tui_tool_metadata_test.ml  chat_tui_tool_render_test.ml  chat_tui_type_ahead_debounce_test.ml  chat_tui_type_ahead_debounce_test.mli  chat_tui_type_ahead_test.ml  chat_tui_type_ahead_test.mli  chat_tui_undo_test.ml  chatmd_parser_test.ml  chatml_moderator_runtime_test.ml  chatml_parse_test.ml  chatml_runtime_test.ml  chatml_script_test.ml  chatml_typechecker_test.ml  chatml_value_codec_test.ml  (+30 more)
(+13436 files in other folders)
