(library
 (name ocaml_parser)
 (modules ocaml_parser)
 (public_name chatgpt.ocaml_parser)
 (libraries io ppxlib core vector_db openai owl re pcre)
 (preprocess
  (pps ppx_jane)))

(library
 (name environment)
 (public_name chatgpt.environment)
 (modules environment)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name tikitoken)
 (modules tikitoken)
 (public_name chatgpt.tikitoken)
 (libraries io ppxlib core pcre eio eio_main eio.unix base64)
 (preprocess
  (pps ppx_jane)))

(library
 (name doc)
 (modules doc)
 (public_name chatgpt.doc)
 (libraries io ppxlib core eio eio_main eio.unix)
 (preprocess
  (pps ppx_jane)))

(library
 (name vector_db)
 (public_name chatgpt.vector_db)
 (modules vector_db)
 (libraries io ppxlib core bin_prot_utils_eio openai owl doc)
 (preprocess
  (pps ppx_jane)))

(library
 (name bin_prot_utils)
 (public_name chatgpt.bin_prot_utils)
 (modules bin_prot_utils)
 (libraries core core_unix.bigstring_unix eio eio.unix core_unix)
 (preprocess
  (pps ppx_jane)))

(library
 (name bin_prot_utils_eio)
 (public_name chatgpt.bin_prot_utils_eio)
 (modules bin_prot_utils_eio)
 (libraries core core_unix.bigstring_unix eio eio.unix)
 (preprocess
  (pps ppx_jane)))

(library
 (name github)
 (modules github)
 (public_name chatgpt.github)
 (libraries
  doc
  io
  cohttp
  jsonaf
  tls-eio
  core
  eio
  eio_main
  eio.unix
  cohttp-eio
  mirage-crypto-rng-eio)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name mime)
 (public_name chatgpt.mime)
 (modules mime)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name filter_file)
 (public_name chatgpt.filter_file)
 (modules filter_file)
 (libraries core))

(library
 (name source)
 (public_name chatgpt.source)
 (modules source)
 (libraries core)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name template)
 (modules template)
 (public_name chatgpt.template)
 (libraries core expect_test_helpers_core re2 angstrom)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name io)
 (public_name chatgpt.io)
 (modules io)
 (libraries
  jsonaf
  cohttp
  tls-eio
  core
  eio
  eio_main
  eio.unix
  cohttp-eio
  mirage-crypto-rng.unix
  lwt
  lwt.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name merlin)
 (public_name chatgpt.merlin)
 (modules merlin)
 (libraries jsonaf core eio eio.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name indexer)
 (public_name chatgpt.indexer)
 (modules indexer)
 (libraries vector_db doc core openai tikitoken ocaml_parser)
 (preprocess
  (pps ppx_jane)))

(library
 (name gpt_function)
 (public_name chatgpt.gpt_function)
 (modules gpt_function)
 (libraries core openai jsonaf io)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name chat_completion)
 (public_name chatgpt.chat_completion)
 (modules chat_completion)
 (libraries
  core
  openai
  jsonaf
  io
  gpt_function
  definitions
  functions
  chatmd
  lru_cache
  ttl_lru_cache
  bin_prot_utils)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name definitions)
 (public_name chatgpt.definitions)
 (modules definitions)
 (libraries core openai jsonaf io gpt_function)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name functions)
 (public_name chatgpt.functions)
 (modules functions)
 (libraries
  core
  ezgzip
  lambdasoup
  openai
  jsonaf
  io
  gpt_function
  definitions
  vector_db
  indexer
  apply_patch)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name dune_describe)
 (modules dune_describe)
 (public_name chatgpt.dune_describe)
 (libraries io jsonaf ppxlib csexp core eio eio_main eio.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name ttl_lru_cache)
 (modules ttl_lru_cache)
 (public_name chatgpt.ttl_lru_cache)
 (libraries core lru_cache)
 (preprocess
  (pps ppx_jane -dont-apply=sexp_message)))

(library
 (name lru_cache)
 (modules lru_cache Lru_cache_intf)
 (public_name chatgpt.lru_cache)
 (libraries core)
 (preprocess
  (pps ppx_jane -dont-apply=sexp_message)))

(library
 (name jsonaf_ext)
 (public_name chatgpt.jsonaf_ext)
 (modules jsonaf_ext)
 (libraries jsonaf core)
 (preprocess
  (pps ppx_jane)))

(library
 (name apply_patch)
 (public_name chatgpt.apply_patch)
 (modules apply_patch)
 (libraries core uutf uunf)
 (preprocess
  (pps ppx_jane)))

(library
 (name notty_scroll_box)
 (public_name chatgpt.notty_scroll_box)
 (modules notty_scroll_box)
 (libraries core notty)
 (preprocess
  (pps ppx_jane)))
