(library
 (name ocaml_parser)
 (modules ocaml_parser)
 (public_name ochat.ocaml_parser)
 (libraries io ppxlib core vector_db openai owl re pcre)
 (preprocess
  (pps ppx_jane)))

;; ---------------------------------------------------------------------------
;; Session persistence (prompt sessions)
;; ---------------------------------------------------------------------------

(library
 (name session)
 (public_name ochat.session)
 (modules session session_store)
 (wrapped false)
 (libraries core core_unix eio eio.unix openai bin_prot_utils_eio)
 (preprocess
  (pps ppx_jane)))

;; ---------------------------------------------------------------------------
;; Logging library
;; ---------------------------------------------------------------------------

(library
 (name log)
 (public_name ochat.log)
 (modules log)
 (libraries core core_unix eio jsonaf)
 (preprocess
  (pps ppx_jane)))

(library
 (name bm25)
 (public_name ochat.bm25)
 (modules bm25)
 (libraries core eio eio.unix bin_prot_utils_eio)
 (preprocess
  (pps ppx_jane)))

(library
 (name environment)
 (public_name ochat.environment)
 (modules environment)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name tikitoken)
 (modules tikitoken)
 (public_name ochat.tikitoken)
 (libraries io ppxlib core pcre eio eio_main eio.unix base64)
 (preprocess
  (pps ppx_jane)))

(library
 (name doc)
 (modules doc)
 (public_name ochat.doc)
 (libraries io ppxlib core eio eio_main eio.unix)
 (preprocess
  (pps ppx_jane)))

(library
 (name vector_db)
 (public_name ochat.vector_db)
 (modules vector_db)
 (libraries ppxlib core bin_prot_utils_eio owl doc bm25)
 (preprocess
  (pps ppx_jane)))

(library
 (name bin_prot_utils_eio)
 (public_name ochat.bin_prot_utils_eio)
 (modules bin_prot_utils_eio)
 (libraries core core_unix.bigstring_unix eio eio.unix)
 (preprocess
  (pps ppx_jane)))

(library
 (name github)
 (modules github)
 (public_name ochat.github)
 (libraries
  doc
  io
  cohttp
  jsonaf
  tls-eio
  core
  eio
  eio_main
  eio.unix
  cohttp-eio
  mirage-crypto-rng-eio)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name mime)
 (public_name ochat.mime)
 (modules mime)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name filter_file)
 (public_name ochat.filter_file)
 (modules filter_file)
 (libraries core))

(library
 (name source)
 (public_name ochat.source)
 (modules source)
 (libraries core)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name template)
 (modules template)
 (public_name ochat.template)
 (libraries core core_unix expect_test_helpers_core re2 angstrom)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name io)
 (public_name ochat.io)
 (modules io)
 (libraries
  jsonaf
  cohttp
  tls-eio
  core
  eio
  eio_main
  eio.unix
  cohttp-eio
  mirage-crypto-rng.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name merlin)
 (public_name ochat.merlin)
 (modules merlin)
 (libraries jsonaf core eio eio.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name indexer)
 (public_name ochat.indexer)
 (modules indexer)
 (libraries vector_db doc core openai tikitoken ocaml_parser)
 (preprocess
  (pps ppx_jane)))

(library
 (name embed_service)
 (public_name ochat.embed_service)
 (modules embed_service)
 (libraries core eio eio.unix openai tikitoken vector_db)
 (preprocess
  (pps ppx_jane)))

(library
 (name ochat_function)
 (public_name ochat.ochat_function)
 (modules ochat_function)
 (libraries core openai jsonaf io)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name chat_completion)
 (public_name ochat.chat_completion)
 (modules chat_completion)
 (libraries
  core
  openai
  jsonaf
  io
  ochat_function
  definitions
  functions
  chatmd
  lru_cache
  ttl_lru_cache)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name definitions)
 (public_name ochat.definitions)
 (modules definitions)
 (libraries core openai jsonaf io ochat_function)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name functions)
 (public_name ochat.functions)
 (modules functions)
 (libraries
  core
  ezgzip
  lambdasoup
  openai
  jsonaf
  io
  ochat_function
  definitions
  vector_db
  bm25
  webpage_markdown
  indexer
  markdown_indexer
  md_index_catalog
  piaf
  package_index
  apply_patch
  meta_prompting)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name dune_describe)
 (modules dune_describe)
 (public_name ochat.dune_describe)
 (libraries io jsonaf ppxlib csexp core eio eio_main eio.unix)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(library
 (name ttl_lru_cache)
 (modules ttl_lru_cache)
 (public_name ochat.ttl_lru_cache)
 (libraries core lru_cache)
 (preprocess
  (pps ppx_jane -dont-apply=sexp_message)))

(library
 (name lru_cache)
 (modules lru_cache Lru_cache_intf)
 (public_name ochat.lru_cache)
 (libraries core)
 (preprocess
  (pps ppx_jane -dont-apply=sexp_message)))

(library
 (name jsonaf_ext)
 (public_name ochat.jsonaf_ext)
 (modules jsonaf_ext)
 (libraries jsonaf core)
 (preprocess
  (pps ppx_jane)))

(library
 (name apply_patch)
 (public_name ochat.apply_patch)
 (modules apply_patch apply_patch_error)
 (libraries core uutf uunf)
 (preprocess
  (pps ppx_jane)))

(library
 (name notty_scroll_box)
 (public_name ochat.notty_scroll_box)
 (modules notty_scroll_box)
 (libraries core notty)
 (preprocess
  (pps ppx_jane)))

;; ---------------------------------------------------------------------------
;; ODoc indexing libraries
;; ---------------------------------------------------------------------------

(library
 (name odoc_crawler)
 (public_name ochat.odoc_crawler)
 (modules odoc_crawler)
 (libraries core eio eio.unix webpage_markdown log jsonaf pcre path_glob)
 (preprocess
  (pps ppx_jane)))

;; ---------------------------------------------------------------------------
;; Markdown indexing libraries (scaffolding)
;; ---------------------------------------------------------------------------

(library
 (name markdown_crawler)
 (public_name ochat.markdown_crawler)
 (modules markdown_crawler)
 (libraries core eio eio.unix webpage_markdown log jsonaf pcre path_glob)
 (preprocess
  (pps ppx_jane)))

(library
 (name markdown_snippet)
 (public_name ochat.markdown_snippet)
 (modules markdown_snippet)
 (libraries core doc tikitoken lru_cache)
 (preprocess
  (pps ppx_jane)))

(library
 (name markdown_indexer)
 (public_name ochat.markdown_indexer)
 (modules markdown_indexer)
 (libraries
  log
  core
  eio
  eio.unix
  markdown_crawler
  markdown_snippet
  vector_db
  bm25
  io
  openai
  embed_service
  owl
  md_index_catalog
  tiktoken_data
  doc)

 (preprocess
  (pps ppx_jane)))

(library
 (name md_index_catalog)
 (public_name ochat.md_index_catalog)
 (modules md_index_catalog)
 (libraries core owl bin_prot_utils_eio)
 (preprocess
  (pps ppx_jane)))

(library
 (name odoc_snippet)
 (public_name ochat.odoc_snippet)
 (modules odoc_snippet)
 (libraries core doc tikitoken lru_cache)
 (preprocess
  (pps ppx_jane)))

(library
 (name odoc_indexer)
 (public_name ochat.odoc_indexer)
 (modules odoc_indexer)
 ;; merged libraries
 (libraries
  log
  core
  eio
  eio.unix
  odoc_crawler
  odoc_snippet
  vector_db
  bm25
  io
  openai
  embed_service
  package_index
  tiktoken_data
  doc)
 (preprocess
  (pps ppx_jane)))

(library
 (name package_index)
 (public_name ochat.package_index)
 (modules package_index)
 (libraries core io openai owl bin_prot_utils_eio)
 (preprocess
  (pps ppx_jane)))

  (library
   (name tiktoken_data)
   (public_name ochat.tiktoken_data)
   (modules tiktoken_data)
   (libraries core)
   (preprocess (pps ppx_blob))
   (preprocessor_deps (glob_files ../tikitoken/*.tiktoken.txt)))
;; ---------------------------------------------------------------------------
;; Chromium agent tooling (CDP)
;;
;; The Chromium agent library lives in a subdirectory:
;;   lib/chromium_agent/dune
;; ---------------------------------------------------------------------------
