(executable
 (name dep_graph_generator)
 (public_name dep_graph_generator)
 (package chatgpt)
(libraries unix yojson str))

;; Module catalogue generator
(executable
 (name module_catalogue)
 (public_name module_catalogue)
 (package chatgpt)
 (libraries unix sexplib0 sexplib str))

;; Documentation coverage generator
(executable
 (name doc_coverage)
 (public_name doc_coverage)
 (package chatgpt)
 (libraries unix))

;; Binary list extractor
(executable
 (name binary_list)
 (public_name binary_list)
 (package chatgpt)
(libraries core))

;; Executable survey helper – captures `--help` for each public binary
(executable
 (name exe_survey)
 (public_name exe_survey)
 (package chatgpt)
 (libraries core core_unix eio_main eio unix))


;; Documentation content mining aggregator
(executable
 (name doc_mining)
 (public_name doc_mining)
 (package chatgpt)
 (libraries unix))
