(library
 (name filter_file_test)
 (modules filter_file_test)
 (libraries core expect_test_helpers_core filter_file)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chat_response_cache_test)
 (modules chat_response_cache_test)
 (libraries core expect_test_helpers_core chat_response)
 (inline_tests)
 (preprocess (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP stub server (executable used by client tests)
;; ---------------------------------------------------------------------------

; (executable
;  (name mcp_stub_server)
;  (modules mcp_stub_server)
;  (libraries core jsonaf chatgpt.mcp_types))

;; ---------------------------------------------------------------------------
;; MCP client high-level tests (uses stub server)
;; ---------------------------------------------------------------------------

; (library
;  (name mcp_client_test)
;  (modules mcp_client_test)
;  (libraries
;   core expect_test_helpers_core
;   eio eio_main eio.mock eio.unix
;   chatgpt.mcp_client)
;  (inline_tests)
;  (preprocess (pps ppx_jane ppx_expect)))

(library
 (name chat_response_converter_test)
 (modules chat_response_converter_test)
 (libraries core expect_test_helpers_core chat_response eio eio_main eio.mock eio.unix)
 (inline_tests)
 (preprocess (pps ppx_jane ppx_expect)))

(library
 (name chatml_runtime_test)
 (modules chatml_runtime_test)
 (libraries core chatml chatml_resolver chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatml_typechecker_test)
 (modules chatml_typechecker_test)
 (libraries core chatml chatml_typechecker chatml_resolver chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name apply_patch_test)
 (modules apply_patch_test)
 (libraries core expect_test_helpers_core apply_patch)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – stdio implementation tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_stdio_test)
 (modules mcp_transport_stdio_test)
 (libraries
  core
  expect_test_helpers_core
  eio eio_main eio.mock eio.unix
  chatgpt.mcp_transport)
 (inline_tests)
 (preprocess (pps ppx_jane ppx_expect)))

