(library
 (name filter_file_test)
 (modules filter_file_test)
 (libraries core expect_test_helpers_core filter_file)
 (inline_tests
  (deps ../out-cl100k_base.tikitoken.txt))
 (preprocess
  (pps ppx_jane ppx_blob ppx_expect)))

;; ---------------------------------------------------------------------------
;; Webpage → Markdown conversion (MVP)                                         
;; ---------------------------------------------------------------------------

(library
 (name webpage_markdown_test)
 (modules webpage_markdown_test)
 (libraries core expect_test_helpers_core chatgpt.webpage_markdown)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Markdown crawler tests
;; ---------------------------------------------------------------------------

(library
 (name markdown_crawler_test)
 (modules markdown_crawler_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.unix
  markdown_crawler)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))


;; ---------------------------------------------------------------------------
;; Chat-TUI – Cmdline mode tests (Phase 3)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_cmdline_mode_test)
 (modules chat_tui_cmdline_mode_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Undo / Redo tests (Phase 2)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_undo_test)
 (modules chat_tui_undo_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – command-mode Phase 0 smoke test
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_command_mode_test)
 (modules chat_tui_command_mode_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Normal mode cursor motion tests (Phase 1)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_normal_mode_cursor_test)
 (modules chat_tui_normal_mode_cursor_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; OAuth dynamic client registration tests
;; ---------------------------------------------------------------------------

(library
 (name oauth_dynamic_registration_test)
 (modules oauth_dynamic_registration_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  chatgpt.mcp_client
  chatgpt.mcp_server_core
  chatgpt.mcp_server_http
  chatgpt.mcp_types)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP server integration test (real HTTP server)
;; ---------------------------------------------------------------------------

(library
 (name mcp_server_integration_test)
 (modules mcp_server_integration_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  chatgpt.mcp_server_core
  chatgpt.mcp_server_http
  chatgpt.mcp_client
  chatgpt.mcp_types
  piaf)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – HTTP SSE & Session-ID tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_http_sse_test)
 (modules mcp_transport_http_sse_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  chatgpt.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – HTTP implementation tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_http_test)
 (modules mcp_transport_http_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  chatgpt.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP client tests over HTTP transport
;; ---------------------------------------------------------------------------

(library
 (name mcp_client_http_test)
 (modules mcp_client_http_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  chatgpt.mcp_client
  chatgpt.mcp_types)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatmd_parser_test)
 (modules chatmd_parser_test)
 (libraries core expect_test_helpers_core chatmd)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chat_response_cache_test)
 (modules chat_response_cache_test)
 (libraries core expect_test_helpers_core chat_response)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP stub server (executable used by client tests)
;; ---------------------------------------------------------------------------

(library
 (name markdown_indexing_test)
 (modules markdown_indexing_test)
 (libraries
  core
  expect_test_helpers_core
  markdown_snippet
  vector_db
  md_index_catalog
  owl
  eio
  eio_main
  eio.unix
  stdio)
 (inline_tests
  (deps ../out-cl100k_base.tikitoken.txt))
 (preprocessor_deps (file ../out-cl100k_base.tikitoken.txt))
 (preprocess
  (pps ppx_jane ppx_blob ppx_expect)))

(executable
 (name mcp_stub_server)
 (public_name mcp_stub_server)
 (modules mcp_stub_server)
 (libraries core jsonaf jsonaf_ext chatgpt.mcp_types))

;; ---------------------------------------------------------------------------
;; MCP client high-level tests (uses stub server)
;; ---------------------------------------------------------------------------

(library
 (name mcp_client_test)
 (modules mcp_client_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  chatgpt.mcp_client
  chatgpt.mcp_types)
 (inline_tests
  (deps %{bin:mcp_stub_server}))
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chat_response_converter_test)
 (modules chat_response_converter_test)
 (libraries
  core
  expect_test_helpers_core
  chat_response
  eio
  eio_main
  eio.mock
  eio.unix)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatml_runtime_test)
 (modules chatml_runtime_test)
 (libraries core chatml chatml_resolver chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatml_typechecker_test)
 (modules chatml_typechecker_test)
 (libraries
  core
  chatml
  chatml_typechecker
  chatml_resolver
  chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name apply_patch_test)
 (modules apply_patch_test)
 (libraries core expect_test_helpers_core apply_patch)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – stdio implementation tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_stdio_test)
 (modules mcp_transport_stdio_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  chatgpt.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))
